...

                <RadioButton
                    android:id="@+id/individual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...

                <RadioButton
                    android:id="@+id/company"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"

                android:textColor="@color/textColor"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etCustAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioSingle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioMarried"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

            <com.rengwuxian.materialedittext.MaterialTextView
                android:id="@+id/etDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialTextView
                android:id="@+id/spinnerOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialTextView
                android:id="@+id/spinnerIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etNominee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialTextView
                android:id="@+id/spinnerNomineeRelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/spinnerNomineeAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etAppointeeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.rengwuxian.materialedittext.MaterialTextView
                android:id="@+id/spinnerAppointeeRelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
