...
                         android:textColor="@color/textColor"
                         app:met_floatingLabel="highlight"
                         app:met_floatingLabelTextSize="14sp"
                         app:met_primaryColor="@color/login_button_background"/>-->

                <com.gcloud.gaadi.ui.CustomMaterialAutoCompleteTxtVw
                    android:id="@+id/makeModel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/makeModelVersion"
                    android:inputType="textCapWords"
                    android:padding="5dp"
                    android:singleLine="true"
...
                    android:textSize="@dimen/insurance_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/insurance_floating_label_textSize"
                    />

                <com.rengwuxian.materialedittext.MaterialTextView
                    android:id="@+id/version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/version"
                    android:inputType="textCapWords"
                    android:padding="5dp"
                    android:singleLine="true"
...
                       android:textColor="@color/textColor"
                       app:met_floatingLabel="highlight"
                       app:met_floatingLabelTextSize="14sp"
                       app:met_primaryColor="@color/login_button_background"/>-->

              <!--  <com.rengwuxian.materialedittext.MaterialCalenderView
                    android:id="@+id/tv_regDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/spinnerStyle"
                    android:hint="@string/reg_date"
                    android:inputType="textCapWords"
                    android:padding="5dp"
...
                        app:met_primaryColor="@color/material_text"/>

                <!--</android.support.design.widget.TextInputLayout>-->


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_RegNum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_regDate"
                    android:hint="@string/reg_no"
                    android:inputType="textCapCharacters"
                    android:maxLength="15"
...
                        android:layout_below="@+id/tv_claimedInCurrentPolicy"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_ClaimPolicyYes"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75"
                            android:button="@drawable/insurance_radio_button"
                            android:text="@string/yes"
                            android:textColor="@color/insurance_radio_button_text_color"
                            android:textSize="@dimen/insurance_text_size" />

                        <RadioButton
                            android:id="@+id/rb_ClaimPolicyNo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@drawable/insurance_radio_button"
                            android:checked="true"
                            android:text="@string/no"
...

                    </RadioGroup>

                </RelativeLayout>

                <com.rengwuxian.materialedittext.MaterialTextView
                    android:id="@+id/tv_NCB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ncb_for_new_policy"
                    android:inputType="textCapWords"
                    android:padding="5dp"
                    android:singleLine="true"
...
                        android:layout_below="@+id/tv_cngLpg"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/yesCngLpg"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75"
                            android:button="@drawable/insurance_radio_button"
                            android:text="@string/yes"
                            android:textColor="@color/insurance_radio_button_text_color"
                            android:textSize="@dimen/insurance_text_size" />

                        <RadioButton
                            android:id="@+id/noCngLpg"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@drawable/insurance_radio_button"
                            android:checked="true"
                            android:text="@string/no"
...
                        android:layout_height="@dimen/view_label_min_height"
                        android:layout_below="@+id/tv_kitType"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_companyFitted"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75"
                            android:button="@drawable/insurance_radio_button"
                            android:text="@string/company_fitted"
                            android:textColor="@color/insurance_radio_button_text_color"
...
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center">-->

                    <com.rengwuxian.materialedittext.MaterialTextView
                        android:id="@+id/prevPolicyEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:hint="Previous Policy End Date*"
...
