...
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <!--Insurance Filter string -->
    <string name="ivr_range">IDV Range </string>
    <string name="zero_check_string">Zero Depreciation Cover</string>
    <string name="consumables">Consumables</string>
    <string name="engine_protection">Engine Protection</string>
    <string name="deductible_string">Voluntary Deductible </string>

    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>
...
    <string name="regplace" translatable="false">Reg Place</string>
    <string name="dealerNum" translatable="false">Dealer Number</string>
    <string name="dealerPrice" translatable="false">Dealr Price</string>
    <string name="regnum" translatable="false">Reg Num</string>
    <string name="price" translatable="false">Price</string>
    <string name="version" translatable="false">Version*</string>
    <string name="next" translatable="false">Next</string>
    <string name="view_lead" traslatable="false">View Lead</string>
    <string name="ad_stock_submit" translatable="false" traslatable="false">Add Stock</string>
    <string name="search_by_name_number" translatable="false">Enter Name or Number</string>
    <string name="emptyString"></string>
    <string name="network_error" translatable="false">No Internet connection</string>
    <string name="checkConnection" translatable="false">Please check your internet connection</string>
...
    <string name="string_first_name">Full Name*</string>
    <string name="string_gender">Gender*</string>
    <string name="string_dob">Date Of Birth </string>
    <string name="string_occupation">Occupation</string>
    <string name="string_income">Annual Income</string>
    <string name="string_nominee">Nominee\'s Full Name*</string>
    <string name="string_previous_policy">Previous Policy Insurer*</string>
    <string name="string_previous_policy_no">Previous Policy No*</string>
    <string name="string_previous_start_date">New Policy Start Date*</string>
    <string name="string_previous_end_date">New Policy End Date*</string>
    <string name="string_appointee">Appointee\'s Full Name*</string>
    <string name="string_appointee_relation">Appointee Relationship With Nominee*</string>
    <string name="string_nominee_relation">Nominee Relationship With Vehicle Owner(Customer)*</string>
...
        <item>Ms.</item>
        <item>Dr.</item>
        <item>Mrs.</item>
    </string-array>

    <string-array name="array_occupation">
        <item>Self Employed</item>
        <item>Service</item>
        <item>Agri/Farmer/Land Holding</item>
        <item>Home Maker</item>
        <item>Retired</item>
        <item>Other</item>
    </string-array>


    <string-array name="array_nominee_relation">
        <item>Father</item>
        <item>Mother</item>
        <item>Spouse</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Sibling</item>
        <item>Guardian</item>
    </string-array>

    <string-array name="array_income">
        <item>3 Lacs</item>
        <item>5-7 Lacs</item>
        <item>7-10 Lacs</item>
        <item>10-15 Lacs</item>
        <item>15 Lacs+</item>
    </string-array>

...
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
...
