...
                        android:drawableRight="@drawable/calendar_grey"
                        android:drawablePadding="4dp"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/material_text" />
        -->
                <com.rengwuxian.materialedittext.MaterialTextView
                    android:id="@+id/policyInsurer"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/string_previous_policy"
                    android:textSize="@dimen/insurance_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/insurance_floating_label_textSize"

                    app:met_primaryColor="@color/material_text" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/policyNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/string_previous_policy_no"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
...
                    app:met_floatingLabelTextSize="@dimen/insurance_floating_label_textSize"

                    app:met_primaryColor="@color/material_text" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/engineNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="Engine No*"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
...
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/insurance_floating_label_textSize"
                    app:met_primaryColor="@color/material_text" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/chasisNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Chassis No*"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="26"
...
                        android:button="@drawable/insurance_radio_button"
                        android:text="@string/yes"
                        android:textColor="@color/insurance_radio_button_text_color"
                        android:textSize="@dimen/insurance_text_size" />

                    <RadioButton
                        android:id="@+id/rb_carFinancedNo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@drawable/insurance_radio_button"
                        android:checked="true"
                        android:text="@string/no"
...
